; ModuleID = '/home/carl/AnghaBench/linux/drivers/hwtracing/coresight/extr_coresight-etm4x.c_etm4_get_access_type.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hwtracing/coresight/extr_coresight-etm4x.c_etm4_get_access_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.etmv4_config = type { i32 }

@ETM_EXLEVEL_S_APP = common dso_local global i32 0, align 4
@ETM_EXLEVEL_S_OS = common dso_local global i32 0, align 4
@ETM_EXLEVEL_S_HYP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.etmv4_config*)* @etm4_get_access_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @etm4_get_access_type(%struct.etmv4_config* %0) #0 {
  %2 = alloca %struct.etmv4_config*, align 8
  %3 = alloca i32, align 4
  store %struct.etmv4_config* %0, %struct.etmv4_config** %2, align 8
  %4 = load %struct.etmv4_config*, %struct.etmv4_config** %2, align 8
  %5 = call i32 @etm4_get_ns_access_type(%struct.etmv4_config* %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* @ETM_EXLEVEL_S_APP, align 4
  %7 = load i32, i32* @ETM_EXLEVEL_S_OS, align 4
  %8 = or i32 %6, %7
  %9 = load i32, i32* @ETM_EXLEVEL_S_HYP, align 4
  %10 = or i32 %8, %9
  %11 = load i32, i32* %3, align 4
  %12 = or i32 %11, %10
  store i32 %12, i32* %3, align 4
  %13 = load i32, i32* %3, align 4
  ret i32 %13
}

declare dso_local i32 @etm4_get_ns_access_type(%struct.etmv4_config*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
